[gd_scene format=3 uid="uid://b3ec0tm7wwtta"]

[ext_resource type="Texture2D" uid="uid://dko4mbiiwh1jl" path="res://assets/door.png" id="1_hpvv5"]
[ext_resource type="Script" uid="uid://qvj2icjwrbcg" path="res://scenes/door.gd" id="1_uvdjg"]
[ext_resource type="AudioStream" uid="uid://d1j72flu2apha" path="res://assets/audio/door open.wav" id="3_la1wf"]
[ext_resource type="AudioStream" uid="uid://cbfr0y0uises7" path="res://assets/audio/door close.wav" id="4_18pbm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uvdjg"]
atlas = ExtResource("1_hpvv5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83dcw"]
atlas = ExtResource("1_hpvv5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_la1wf"]
atlas = ExtResource("1_hpvv5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_18pbm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvdjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83dcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la1wf")
}],
"loop": false,
"name": &"open",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpvv5"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5f452"]
size = Vector2(1, 32)

[node name="Door" type="Node2D" unique_id=513734541]
script = ExtResource("1_uvdjg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=536790066]
position = Vector2(8, -8)
sprite_frames = SubResource("SpriteFrames_18pbm")
animation = &"open"

[node name="Area2D" type="Area2D" parent="." unique_id=847889722]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=2009485225]
shape = SubResource("RectangleShape2D_hpvv5")

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=641509623]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=438536179]
shape = SubResource("RectangleShape2D_5f452")

[node name="DoorOpen" type="AudioStreamPlayer2D" parent="." unique_id=593415784]
stream = ExtResource("3_la1wf")
bus = &"Door"

[node name="DoorClose" type="AudioStreamPlayer2D" parent="." unique_id=100589755]
stream = ExtResource("4_18pbm")
bus = &"Door"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
